--- a/requirements.txt
+++ b/requirements.txt
@@ -32,5 +32,8 @@ six==1.12.0
 SQLAlchemy==1.3.0
 urllib3==1.24.2
 visitor==0.1.3
-Werkzeug==0.14.1
+Werkzeug==0.15.3
 WTForms==2.2.1
+# Heroku requirements
+psycopg2==2.7.3.1
+gunicorn==19.7.1
